modified the read me and project files

--- a/project_regression.ipynb
+++ b/project_regression.ipynb
@@ -930,12 +930,84 @@
   {
    "cell_type": "markdown",
    "id": "8c22d0e8-433b-41ea-973f-ef45e7c7e0e5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Next Steps\n",
     "\n",
     "The next steps include comparing the train RMSE vs the validate RMSE and further exploring other features. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7a395d3-f61b-4239-ad4e-9a05e3c70727",
+   "metadata": {},
+   "source": [
+    "## THE Big Pipeline Plan\n",
+    "> Acquire\n",
+    "    >- get the data into pandas\n",
+    "    >- look at it\n",
+    "        >>- describe, info, head, shape\n",
+    "    >- understand what your data means\n",
+    "        >>- know what each column is\n",
+    "      >>- know what your target variable is\n",
+    "    \n",
+    "> Wrangle\n",
+    "    >- clean the data\n",
+    "       >>- handle nulls\n",
+    "       >>- handle outliers\n",
+    "       >>- correct datatypes\n",
+    "    >- univariate analysis (looking at only one variable)\n",
+    "    >- encode variables -- Preprocessing\n",
+    "    >- split into train, validate/, test\n",
+    "    >- scale data (after train/validate/test split) -- Preprocessing\n",
+    "    >- document how your changing the data\n",
+    "\n",
+    "> Explore\n",
+    "    >- use only train data!\n",
+    "       >>- use unscaled data\n",
+    "    >- establish relationships using multivariate analysis\n",
+    "       >>- hypothesize\n",
+    "       >>- visualize\n",
+    "       >>- statistize\n",
+    "       >>- summarize\n",
+    "    >- feature engineering\n",
+    "       >>- when using RFE, use scaled data\n",
+    "\n",
+    "> Model\n",
+    "    >- use scaled/encoded data\n",
+    "    >- split into X_variables and y_variables\n",
+    "      >>- X_train, y_train, X_validate, y_validate, X_test, y_test\n",
+    "    >- build models\n",
+    "      >>- make the thing\n",
+    "      >>- fit the thing (on train)\n",
+    "      >>- use the thing\n",
+    "    >- evaluate models on train and validate\n",
+    "    >- pick the best model and evaluate it on test\n",
+    "\n",
+    "> Models used\n",
+    "    >- Ordinary Least Squares + RFE\n",
+    "    >- LASSO + LARS\n",
+    "    >- Polynomial Regression\n",
+    "    >- Generalized Linear Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e476b155-1c2a-4efb-86bb-03131f725ca3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34db5ca7-980d-4086-b76d-2163f59ea57d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
