Modified the read_me and project files

--- a/project_regression.ipynb
+++ b/project_regression.ipynb
@@ -940,6 +940,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d876b47d-bf41-4df2-9a7a-fa43ee93d944",
+   "metadata": {},
+   "source": [
+    "## THE Big Pipeline Plan\n",
+    "> Acquire\n",
+    "\n",
+    ">- get the data into pandas\n",
+    ">- look at it\n",
+    "    >>- describe, info, head, shape\n",
+    ">- understand what your data means\n",
+    "    >>- know what each column is\n",
+    "  >>- know what your target variable is\n",
+    "    \n",
+    "> Wrangle\n",
+    "\n",
+    ">- clean the data\n",
+    "   >>- handle nulls\n",
+    "   >>- handle outliers\n",
+    "   >>- correct datatypes\n",
+    ">- univariate analysis (looking at only one variable)\n",
+    ">- encode variables -- Preprocessing\n",
+    ">- split into train, validate/, test\n",
+    ">- scale data (after train/validate/test split) -- Preprocessing\n",
+    ">- document how your changing the data\n",
+    "\n",
+    "> Explore\n",
+    "\n",
+    ">- use only train data!\n",
+    "   >>- use unscaled data\n",
+    ">- establish relationships using multivariate analysis\n",
+    "   >>- hypothesize\n",
+    "   >>- visualize\n",
+    "   >>- statistize\n",
+    "   >>- summarize\n",
+    ">- feature engineering\n",
+    "   >>- when using RFE, use scaled data\n",
+    "\n",
+    "> Model\n",
+    "\n",
+    ">- use scaled/encoded data\n",
+    ">- split into X_variables and y_variables\n",
+    "  >>- X_train, y_train, X_validate, y_validate, X_test, y_test\n",
+    ">- build models\n",
+    "  >>- make the thing\n",
+    "  >>- fit the thing (on train)\n",
+    "  >>- use the thing\n",
+    ">- evaluate models on train and validate\n",
+    ">- pick the best model and evaluate it on test\n",
+    "\n",
+    "> Models used\n",
+    "\n",
+    ">- Ordinary Least Squares + RFE\n",
+    ">- LASSO + LARS\n",
+    ">- Polynomial Regression\n",
+    ">- Generalized Linear Model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e476b155-1c2a-4efb-86bb-03131f725ca3",
