Modified the project file

--- a/project_regression.ipynb
+++ b/project_regression.ipynb
@@ -138,35 +138,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "faeb2214-ca7a-4782-88dd-04f7d978a5cb",
+   "cell_type": "markdown",
+   "id": "1f41fa1e-71fe-44f4-855b-1ab1dbbc1740",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 47347 entries, 0 to 52440\n",
-      "Data columns (total 8 columns):\n",
-      " #   Column          Non-Null Count  Dtype  \n",
-      "---  ------          --------------  -----  \n",
-      " 0   bedrooms        47347 non-null  int64  \n",
-      " 1   bathrooms       47347 non-null  float64\n",
-      " 2   area            47347 non-null  int64  \n",
-      " 3   yearbuilt       47347 non-null  int64  \n",
-      " 4   county          47347 non-null  object \n",
-      " 5   county_Orange   47347 non-null  uint8  \n",
-      " 6   county_Ventura  47347 non-null  uint8  \n",
-      " 7   property_value  47347 non-null  int64  \n",
-      "dtypes: float64(1), int64(4), object(1), uint8(2)\n",
-      "memory usage: 2.6+ MB\n"
-     ]
-    }
-   ],
    "source": [
-    "df.info()"
+    "## Data Dictionary\n",
+    "\n",
+    "| Features | Definition |\n",
+    "| --- | --- |\n",
+    "| bedrooms | Number of bedrooms |\n",
+    "| bathrooms | Number of bathrooms |\n",
+    "| area | Area of the house in square footage |\n",
+    "| yearbuilt | The year the property was built |\n",
+    "| county | The county were the properies are located |\n",
+    "| county_Orange | Orange county - where the property is located |\n",
+    "| county_Ventura | Ventura county - where the property is located |\n",
+    "| property_value | property tax assessed value in dollars |"
    ]
   },
   {
